      true in SeatDefaults.
    - We also allow usernames for UCCS login.
    - 90-unity-greeter-x2go.conf: Override all known LightDM setups
      that we know of in Ubuntu.
    - Show Remote Login box if no other boxes (usernames, other login,
      guest login) are to be shown.
    - Fix config parameter (show-remote-login -> greeter-show-remote-login).
  * debian/control:
    + Add to S: lightdm-remote-session-x2go.
    + Drop from S: lightdm-remote-session-uccsconfigure.
    + Replace in S: remote-login-service -> remote-login-service-x2go.
    + Add to D: network-manager. TODO: Without network-manager no Remote Login.
      This needs to be addressed later.
  * debian/source/format:
    + Switch to format 1.0.
  * debian/control:
    + Rename (src:)package: unity-greeter -> unity-greeter-x2go.
    + Put myself in Maintainer: field.
    + Bump Standards: to 3.9.6. No changes needed.
    + Upgrade to D (unity-greeter-x2go): lightdm.
    + Upgrade to R (unity-greeter-x2go): remote-login-service,
      lightdm-remote-login-x2go, lightdm-remote-login-freerdp.
    + Add to R (unity-greeter-x2go): xinput.
  * debian/copyright:
    + Adapt file to forked context of unity-greeter-x2go.
  * debian/watch:
    + Drop file (i.e. reference to original unity-greeter
      upstream download resource).
  * debian/rules:
    + Fix installation of logo.png into bin:package.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Sun, 02 Nov 2014 19:12:50 +0100

unity-greeter (14.04.10-0ubuntu1) trusty; urgency=medium

  * New upstream release:
    - Require user to acknowledge messages received after authentication is
      complete, for example if their password is about to expire. (LP: #1304866)

 -- Robert Ancell <robert.ancell@canonical.com>  Wed, 30 Apr 2014 15:33:19 +1200

unity-greeter (14.04.9-0ubuntu1) trusty; urgency=medium

  * New upstream release:
    - Correctly handle SIGTERM and quit cleanly. We were previously not stopping