@@ -12,6 +12,7 @@ unity-greeter-x2go (14.04.10-0x2go1) UNRELEASED; urgency=medium
     - Show Remote Login box if no other boxes (usernames, other login,
       guest login) are to be shown.
     - Fix config parameter (show-remote-login -> greeter-show-remote-login).
+    - Improve selection code of new entry if an entry is removed.
   * debian/control:
     + Add to S: lightdm-remote-session-x2go.
     + Drop from S: lightdm-remote-session-uccsconfigure.
